# UtilCpp

./: .gitignore  CMakeLists.txt  README.md
include/: util.hpp
